--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,15 @@ div#gameBoard {
  padding: 24px;
  margin: 0px auto;
 }
+div#gameBoard > div {
+ background: #FF3399;
+ border: #000 1px solid;
+ width: 71px;
+ height: 71px;
+ float: left;
+ margin: 10px;
+ padding: 20px;
+ font-size: 64px;
+ cursor: pointer;
+ text-align: center;
+}
