--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 body
+ul
 {
   background-color: #997a85;
+  padding: 0;  margin: 0;
+}
+
+.flip-container {
+  perspective: 1000px;
   padding: 0;
   text-align: center;
 	background-size: cover;
