more stuff with css

--- a/css/style.css
+++ b/css/style.css
@@ -30,4 +30,14 @@ div#gameBoard > div {
  font-size: 64px;
  cursor: pointer;
  text-align: center;
+  float: left;
+  margin: 10px;
+  list-style: none;
+}
+body{
+  width: 1250px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
 }
