--- a/css/style.css
+++ b/css/style.css
@@ -40,4 +40,14 @@ body{
   margin-left: auto;
   margin-right: auto;
 }
+ .reset{
+   width:200px;
+   height:50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* flip the pane when clicked */
+.flip-container.flip .flipper
+{
+  transform: rotateY(180deg);
 }
