--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,18 @@ body{
 {
   transform: rotateY(180deg);
 }
+
+.flip-container, .front, .back
+{
+  width: 150px;
+  height: 200px;
+}
+
+/* flip speed goes here */
+.flipper
+{
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
