more card stuff

--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,13 @@ body{
   position: relative;
 }
 
+/* hide back of pane during swap */
+.front, .back
+{
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* front pane, placed above back */
