--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,14 @@ body{
 }
 
 /* front pane, placed above back */
+.front
+{
+  background-color: blue;
+  outline: solid;
+  z-index: 2;
+}
+.back
+{
+  outline: solid;
+  transform: rotateY(180deg);
+}
